--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "mongodb": "^2.2.30",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14",
-    "@angular/cli": "1.2.4"
+    "@angular/cli": "1.2.4",  
+    "@angular/compiler-cli": "^4.0.0"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
