--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eplayas",
   "version": "1.1.1",
   "license": "MIT",
+  "main": "server.js",  
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
