--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
     "start": "node server.js",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "protractor",
+    "e2e": "ng e2e",
     "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.0",
-    "@angular/cli": "1.2.4",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
@@ -29,9 +27,11 @@
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "rxjs": "^5.4.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "@angular/cli": "^1.2.4",
+    "@angular/compiler-cli": "^4.0.0"    
   },
-  "devDependencies": {
+  "devDependencies": {  
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
