--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.20",
+  "version": "1.1.21",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -27,10 +27,11 @@
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
+    "ngx-bootstrap": "^1.9.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14",
-    "@angular/cli": "1.3.1",
-    "@angular/compiler-cli": "^4.2.4"    
+    "@angular/cli": "^1.3.2",
+    "@angular/compiler-cli": "^4.2.4"
   },
   "devDependencies": {
     "@angular/language-service": "^4.2.4",
