--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "^1.3.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -24,14 +26,13 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
     "ngx-bootstrap": "^1.9.1",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14",
-    "@angular/cli": "^1.3.2",
-    "@angular/compiler-cli": "^4.2.4"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/language-service": "^4.2.4",
