--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.24",
+  "version": "1.1.25",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -26,11 +26,10 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "body-parser": "^1.17.2",
-    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
-    "ngx-bootstrap": "^1.9.1",
+    "ng2-semantic-ui": "^0.9.6",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
