--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.27",
+  "version": "1.1.28",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -14,18 +14,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.4.1",    
     "@angular/animations": "^4.2.4",
-    "@angular/cli": "^1.3.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",    
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.0",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
