--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.31",
+  "version": "1.1.32",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -14,11 +14,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.4.1",    
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "^1.4.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",    
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -29,7 +29,6 @@
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
-    "ng2-semantic-ui": "^0.9.6",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -53,7 +52,7 @@
     "typescript": "~2.3.3"
   },
   "engines": {
-    "node": "8.4.0",
+    "node": "8.5.0",
     "npm": "5.3.0"
   }
 }
