--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.32",
+  "version": "1.1.33",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -14,8 +14,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^1.4.3",    
     "@angular/animations": "^4.2.4",
-    "@angular/cli": "^1.4.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/compiler-cli": "^4.2.4",
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.0",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
+    "mini.css": "^2.3.4",
     "mongodb": "^2.2.31",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
