--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,12 @@
       "es2017",
       "dom"
     ]
-  }
+  },
+    "angularCompilerOptions": {
+      "preserveWhitespaces": false
+  },
+    "exclude": [
+      "test.ts",
+      "**/*.spec.ts"
+    ]
 }
