--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.84",
+  "version": "1.1.85",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -15,6 +15,8 @@
   "private": true,
   "dependencies": {
     "@angular/cli": "1.6.0",
+    "@angular/compiler-cli": "^5.0.0",   
+    "typescript": "~2.4.2", 
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -32,6 +34,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular/cli": "1.6.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
