--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.85",
+  "version": "1.1.84",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -14,12 +14,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.6.0",
-    "@angular/compiler-cli": "^5.0.0",   
-    "typescript": "~2.4.2", 
     "@angular/animations": "^5.0.0",
+    "@angular/cli": "1.6.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -29,8 +28,9 @@
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
-    "mongodb": "^3.0.0-rc0",
+    "mongodb": "^2.2.33",
     "rxjs": "^5.5.2",
+    "typescript": "~2.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
