--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.84",
+  "version": "1.1.85",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -55,7 +55,7 @@
     "typescript": "~2.4.2"
   },
   "engines": {
-    "node": "8.9.2",
+    "node": "8.9.3",
     "npm": "5.5.1"
   }
 }
