--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@angular/animations": "^5.1.3",
     "@angular/cli": "^1.6.3",
+    "@angular/compiler-cli": "^5.1.3",
     "@angular/common": "^5.1.3",
     "@angular/compiler": "^5.1.3",
     "@angular/core": "^5.1.3",
