--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.118",
+  "version": "1.1.119",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^6.1.1",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/animations": "^6.0.0",
     "@angular/common": "^6.0.0",
@@ -34,7 +35,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "^6.0.1",
+    "@angular/cli": "^6.1.1",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.3",
@@ -43,19 +44,19 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
   },
   "engines": {
-    "node": "8.11.1",
-    "npm": "6.0.1"
+    "node": "8.11.3",
+    "npm": "6.2.0"
   }
 }
