--- a/package.json
+++ b/package.json
@@ -1,60 +1,59 @@
 {
-    "name": "eplayas",
-    "version": "1.1.135",
-    "license": "MIT",
-    "main": "server.js",
-    "scripts": {
-        "ng": "ng",
-        "start": "node server.js",
-        "build": "ng build --prod",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "heroku-run-build-script": true,
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^7.2.14",
-        "@angular/cli": "^7.3.8",
-        "@angular/common": "^7.2.14",
-        "@angular/compiler": "^7.2.14",
-        "@angular/compiler-cli": "^7.2.14",
-        "@angular/core": "^7.2.14",
-        "@angular/forms": "^7.2.14",
-        "@angular/http": "^7.2.14",
-        "@angular/platform-browser": "^7.2.14",
-        "@angular/platform-browser-dynamic": "^7.2.14",
-        "@angular/router": "^7.2.14",
-        "body-parser": "^1.18.2",
-        "core-js": "^2.5.3",
-        "express": "^4.16.2",
-        "mongodb": "^2.2.34",
-        "rxjs": "^6.5.1",
-        "typescript": "~3.2.4",
-        "zone.js": "^0.8.29"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^0.13.8",
-        "@angular/cli": "^7.3.8",
-        "@angular/language-service": "^7.2.14",
-        "@types/jasmine": "~2.8.3",
-        "@types/jasminewd2": "~2.0.2",
-        "@types/node": "~8.9.4",
-        "codelyzer": "~4.2.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^2.0.5",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "^5.4.0",
-        "ts-node": "~5.0.1",
-        "tslint": "~5.9.1"
-    },
-    "engines": {
-        "node": "10.15.1",
-        "npm": "6.7.0"
-    }
+  "name": "eplayas",
+  "version": "1.1.136",
+  "license": "MIT",
+  "main": "server.js",
+  "scripts": {
+    "ng": "ng",
+    "start": "node server.js",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "heroku-run-build-script": true,
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^7.2.15",
+    "@angular/cli": "^7.3.9",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "body-parser": "^1.19.0",
+    "core-js": "^2.5.3",
+    "express": "^4.17.0",
+    "mongodb": "^2.2.34",
+    "rxjs": "^6.5.2",
+    "typescript": "^3.4.5",
+    "zone.js": "^0.8.29"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/language-service": "^7.2.15",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^2.0.5",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "^5.4.2",
+    "ts-node": "~5.0.1",
+    "tslint": "^5.16.0"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.9.0"
+  }
 }
