--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eplayas",
-    "version": "1.1.139",
+    "version": "1.1.140",
     "license": "MIT",
     "main": "server.js",
     "scripts": {
@@ -14,16 +14,15 @@
     "heroku-run-build-script": true,
     "private": true,
     "dependencies": {
-        "@angular/animations": "^8.0.0",
-        "@angular/cli": "^8.0.1",
-        "@angular/common": "^8.0.0",
-        "@angular/compiler": "^8.0.0",
-        "@angular/compiler-cli": "^8.0.0",
-        "@angular/core": "^8.0.0",
-        "@angular/forms": "^8.0.0",
-        "@angular/platform-browser": "^8.0.0",
-        "@angular/platform-browser-dynamic": "^8.0.0",
-        "@angular/router": "^8.0.0",
+        "@angular/animations": "^8.2.0-next.0",
+        "@angular/common": "^8.2.0-next.0",
+        "@angular/compiler": "^8.2.0-next.0",
+        "@angular/compiler-cli": "^8.2.0-next.0",
+        "@angular/core": "^8.2.0-next.0",
+        "@angular/forms": "^8.2.0-next.0",
+        "@angular/platform-browser": "^8.2.0-next.0",
+        "@angular/platform-browser-dynamic": "^8.2.0-next.0",
+        "@angular/router": "^8.2.0-next.0",
         "body-parser": "^1.19.0",
         "core-js": "^2.5.3",
         "express": "^4.17.0",
@@ -33,8 +32,9 @@
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.800.0",
-        "@angular/language-service": "^8.0.0",
+        "@angular-devkit/build-angular": "~0.801.0",
+        "@angular/language-service": "^8.2.0-next.0",
+        "@angular/cli": "^8.1.0",
         "@types/jasmine": "~2.8.3",
         "@types/jasminewd2": "^2.0.6",
         "@types/node": "~8.9.4",
@@ -53,6 +53,6 @@
     },
     "engines": {
         "node": "12.4.0",
-        "npm": "6.9.0"
+        "npm": "6.9.2"
     }
 }
