--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
         "express": "^4.17.0",
         "mongodb": "^3.3.2",
         "rxjs": "^6.5.3",
-        "typescript": "^3.5.3",
+        "typescript": "3.5.3",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.803.4",
         "@angular/language-service": "^9.0.0-next.6",
-        "@angular/cli": "^8.3.4",
+        "@angular/cli": "^8.3.12",
         "@types/jasmine": "~2.8.3",
         "@types/jasminewd2": "^2.0.6",
         "@types/node": "~8.9.4",
