--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-    "name": "eplayas",
-    "version": "1.1.155",
-    "license": "MIT",
-    "main": "server.js",
-    "scripts": {
-        "ng": "ng",
-        "start": "node server.js",
-        "build": "ng build --prod",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "heroku-run-build-script": true,
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^9.1.11",
-        "@angular/common": "^9.1.11",
-        "@angular/compiler": "^9.1.11",
-        "@angular/compiler-cli": "^9.1.11",
-        "@angular/core": "^9.1.11",
-        "@angular/forms": "^9.1.11",
-        "@angular/platform-browser": "^9.1.11",
-        "@angular/platform-browser-dynamic": "^9.1.11",
-        "@angular/router": "^9.1.11",
-        "body-parser": "^1.19.0",
-        "core-js": "^3.6.5",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.0",
-        "mongodb": "^3.5.9",
-        "rxjs": "^6.5.5",
-        "tslib": "^1.11.1",
-        "typescript": "^3.8.3",
-        "zone.js": "~0.10.3"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.901.9",
-        "@angular/cli": "^9.1.9",
-        "@angular/language-service": "^9.1.11",
-        "@types/jasmine": "^3.5.10",
-        "@types/jasminewd2": "^2.0.6",
-        "@types/node": "^13.11.1",
-        "codelyzer": "^5.2.2",
-        "jasmine-core": "^3.5.0",
-        "jasmine-spec-reporter": "^5.0.2",
-        "karma": "^5.0.0",
-        "karma-chrome-launcher": "^3.1.0",
-        "karma-cli": "^2.0.0",
-        "karma-coverage-istanbul-reporter": "^2.1.1",
-        "karma-jasmine": "^3.1.1",
-        "karma-jasmine-html-reporter": "^1.5.4",
-        "protractor": "^5.4.3",
-        "ts-node": "^8.8.2",
-        "tslint": "^6.1.2"
-    },
-    "engines": {
-        "node": "12.16.1",
-        "npm": "6.13.4"
-    }
+  "name": "eplayas",
+  "version": "1.1.156",
+  "license": "MIT",
+  "main": "server.js",
+  "scripts": {
+    "ng": "ng",
+    "start": "node server.js",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "heroku-run-build-script": true,
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^10.0.4",
+    "@angular/common": "^10.0.4",
+    "@angular/compiler": "^10.0.4",
+    "@angular/compiler-cli": "^10.0.4",
+    "@angular/core": "^10.0.4",
+    "@angular/forms": "^10.0.4",
+    "@angular/platform-browser": "^10.0.4",
+    "@angular/platform-browser-dynamic": "^10.0.4",
+    "@angular/router": "^10.0.4",
+    "body-parser": "^1.19.0",
+    "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.0",
+    "mongodb": "^3.5.9",
+    "rxjs": "^6.6.0",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.6",
+    "zone.js": "~0.10.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1000.2",
+    "@angular/cli": "^10.0.2",
+    "@angular/language-service": "^10.0.4",
+    "@types/jasmine": "^3.5.10",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^13.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "^8.8.2",
+    "tslint": "~6.1.0"
+  },
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.4"
+  }
 }
