--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "eplayas",
-  "version": "1.1.156",
-  "license": "MIT",
-  "main": "server.js",
-  "scripts": {
-    "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "heroku-run-build-script": true,
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^10.0.4",
-    "@angular/common": "^10.0.4",
-    "@angular/compiler": "^10.0.4",
-    "@angular/compiler-cli": "^10.0.4",
-    "@angular/core": "^10.0.4",
-    "@angular/forms": "^10.0.4",
-    "@angular/platform-browser": "^10.0.4",
-    "@angular/platform-browser-dynamic": "^10.0.4",
-    "@angular/router": "^10.0.4",
-    "body-parser": "^1.19.0",
-    "core-js": "^3.6.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.0",
-    "mongodb": "^3.5.9",
-    "rxjs": "^6.6.0",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.6",
-    "zone.js": "~0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.2",
-    "@angular/cli": "^10.0.2",
-    "@angular/language-service": "^10.0.4",
-    "@types/jasmine": "^3.5.10",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^13.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "^8.8.2",
-    "tslint": "~6.1.0"
-  },
-  "engines": {
-    "node": "12.18.2",
-    "npm": "6.14.4"
-  }
+    "name": "eplayas",
+    "version": "1.1.157",
+    "license": "MIT",
+    "main": "server.js",
+    "scripts": {
+        "ng": "ng",
+        "start": "node server.js",
+        "build": "ng build --prod",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "heroku-run-build-script": true,
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^11.0.3",
+        "@angular/common": "^11.0.3",
+        "@angular/compiler": "^11.0.3",
+        "@angular/compiler-cli": "^11.0.3",
+        "@angular/core": "^11.0.3",
+        "@angular/forms": "^11.0.3",
+        "@angular/platform-browser": "^11.0.3",
+        "@angular/platform-browser-dynamic": "^11.0.3",
+        "@angular/router": "^11.0.3",
+        "body-parser": "^1.19.0",
+        "core-js": "^3.8.1",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.0",
+        "mongodb": "^3.6.3",
+        "rxjs": "^6.6.3",
+        "tslib": "^2.0.3",
+        "typescript": "4.0.5",
+        "zone.js": "^0.11.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1100.3",
+        "@angular/cli": "^11.0.3",
+        "@angular/language-service": "^11.0.3",
+        "@types/jasmine": "~3.6.0",
+        "@types/jasminewd2": "^2.0.6",
+        "@types/node": "^13.11.1",
+        "codelyzer": "^6.0.1",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "^5.2.3",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-cli": "^2.0.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "^8.8.2",
+        "tslint": "^6.1.3"
+    },
+    "engines": {
+        "node": "12.18.2",
+        "npm": "6.14.4"
+    }
 }
