--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eplayas",
-    "version": "1.1.157",
+    "version": "1.1.158",
     "license": "MIT",
     "main": "server.js",
     "scripts": {
@@ -34,8 +34,8 @@
         "zone.js": "^0.11.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1100.3",
-        "@angular/cli": "^11.0.3",
+        "@angular-devkit/build-angular": "~0.1100.4",
+        "@angular/cli": "^11.0.4",
         "@angular/language-service": "^11.0.3",
         "@types/jasmine": "~3.6.0",
         "@types/jasminewd2": "^2.0.6",
@@ -43,7 +43,7 @@
         "codelyzer": "^6.0.1",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
-        "karma": "^5.2.3",
+        "karma": "~5.1.0",
         "karma-chrome-launcher": "~3.1.0",
         "karma-cli": "^2.0.0",
         "karma-coverage-istanbul-reporter": "~3.0.2",
