--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eplayas",
-    "version": "1.1.158",
+    "version": "1.1.159",
     "license": "MIT",
     "main": "server.js",
     "scripts": {
@@ -14,17 +14,17 @@
     "heroku-run-build-script": true,
     "private": true,
     "dependencies": {
-        "@angular/animations": "^11.0.3",
-        "@angular/common": "^11.0.3",
-        "@angular/compiler": "^11.0.3",
-        "@angular/compiler-cli": "^11.0.3",
-        "@angular/core": "^11.0.3",
-        "@angular/forms": "^11.0.3",
-        "@angular/platform-browser": "^11.0.3",
-        "@angular/platform-browser-dynamic": "^11.0.3",
-        "@angular/router": "^11.0.3",
+        "@angular/animations": "^11.1.1",
+        "@angular/common": "^11.1.1",
+        "@angular/compiler": "^11.1.1",
+        "@angular/compiler-cli": "^11.1.1",
+        "@angular/core": "^11.1.1",
+        "@angular/forms": "^11.1.1",
+        "@angular/platform-browser": "^11.1.1",
+        "@angular/platform-browser-dynamic": "^11.1.1",
+        "@angular/router": "^11.1.1",
         "body-parser": "^1.19.0",
-        "core-js": "^3.8.1",
+        "core-js": "^3.8.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.0",
         "mongodb": "^3.6.3",
@@ -34,16 +34,16 @@
         "zone.js": "^0.11.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1100.4",
-        "@angular/cli": "^11.0.4",
-        "@angular/language-service": "^11.0.3",
-        "@types/jasmine": "~3.6.0",
+        "@angular-devkit/build-angular": "~0.1101.2",
+        "@angular/cli": "^11.1.2",
+        "@angular/language-service": "^11.1.1",
+        "@types/jasmine": "^3.6.3",
         "@types/jasminewd2": "^2.0.6",
         "@types/node": "^13.11.1",
         "codelyzer": "^6.0.1",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.1.0",
+        "karma": "~5.2.3",
         "karma-chrome-launcher": "~3.1.0",
         "karma-cli": "^2.0.0",
         "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -54,7 +54,7 @@
         "tslint": "^6.1.3"
     },
     "engines": {
-        "node": "14.15.1",
-        "npm": "6.14.8"
+        "node": "14.15.4",
+        "npm": "6.14.10"
     }
 }
