--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,12 +1,9 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "baseUrl": "./",
-    "types": []
-  },
-  "files": [
-    "main.ts",
-    "polyfills.ts"
-  ]
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "../out-tsc/app",
+        "baseUrl": "./",
+        "types": []
+    },
+    "files": ["main.ts", "polyfills.ts"]
 }
