--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eplayas",
-    "version": "1.1.161",
+    "version": "1.1.162",
     "license": "MIT",
     "main": "server.js",
     "scripts": {
@@ -14,43 +14,43 @@
     "heroku-run-build-script": true,
     "private": true,
     "dependencies": {
-        "@angular/animations": "^11.2.4",
-        "@angular/common": "^11.2.4",
-        "@angular/compiler": "^11.2.4",
-        "@angular/compiler-cli": "^11.2.4",
-        "@angular/core": "^11.2.4",
-        "@angular/forms": "^11.2.4",
-        "@angular/platform-browser": "^11.2.4",
-        "@angular/platform-browser-dynamic": "^11.2.4",
-        "@angular/router": "^11.2.4",
+        "@angular/animations": "^11.2.6",
+        "@angular/common": "^11.2.6",
+        "@angular/compiler": "^11.2.6",
+        "@angular/compiler-cli": "^11.2.6",
+        "@angular/core": "^11.2.6",
+        "@angular/forms": "^11.2.6",
+        "@angular/platform-browser": "^11.2.6",
+        "@angular/platform-browser-dynamic": "^11.2.6",
+        "@angular/router": "^11.2.6",
         "body-parser": "^1.19.0",
         "core-js": "^3.9.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.0",
-        "mongodb": "^3.6.4",
+        "mongodb": "^3.6.5",
         "rxjs": "^6.6.6",
         "tslib": "^2.1.0",
         "typescript": "4.1.5",
         "zone.js": "^0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1102.3",
-        "@angular/cli": "^11.2.3",
-        "@angular/language-service": "^11.2.4",
-        "@types/jasmine": "^3.6.4",
+        "@angular-devkit/build-angular": "~0.1102.5",
+        "@angular/cli": "^11.2.5",
+        "@angular/language-service": "^11.2.6",
+        "@types/jasmine": "^3.6.7",
         "@types/jasminewd2": "^2.0.6",
-        "@types/node": "^13.11.1",
+        "@types/node": "^14.14.35",
         "codelyzer": "^6.0.1",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.2.3",
+        "jasmine-core": "^3.7.1",
+        "jasmine-spec-reporter": "^6.0.0",
+        "karma": "^6.2.0",
         "karma-chrome-launcher": "~3.1.0",
         "karma-cli": "^2.0.0",
         "karma-coverage-istanbul-reporter": "~3.0.2",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "^1.5.0",
         "protractor": "~7.0.0",
-        "ts-node": "^8.8.2",
+        "ts-node": "^9.1.1",
         "tslint": "^6.1.3"
     },
     "engines": {
