--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,9 @@
         "target": "es2015",
         "typeRoots": ["node_modules/@types"],
         "lib": ["es2017", "dom"]
+    },
+
+    "angularCompilerOptions": {
+        "strictTemplates": true
     }
 }
