--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "eplayas",
-    "version": "1.1.163",
+    "version": "1.1.164",
     "license": "MIT",
     "main": "server.js",
     "scripts": {
         "ng": "ng",
+        "serve": "ng serve",
         "start": "node server.js",
         "build": "ng build --prod",
         "test": "ng test",
