--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "ng": "ng",
         "serve": "ng serve",
         "start": "node server.js",
-        "build": "ng build --prod",
+        "build": "ng build --configuration production",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
