--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.187",
+  "version": "1.1.188",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "serve": "ng serve",
     "start": "node server.js",
     "build": "ng build --configuration production",
+    "postinstall": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -47,7 +48,7 @@
     "karma-jasmine-html-reporter": "~1.7.0"
   },
   "engines": {
-    "node": "20.11.1",
-    "npm": "10.2.4"
+    "node": "22.14.0",
+    "npm": "11.1.0"
   }
 }
